# neurodocker

./: .autorc  .buildinfo  .codespellrc  .dockerignore  .et  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile_u2004_fs73  LICENSE  MANIFEST.in  Makefile  README.md  Singularity  api.html  build_dashboard.md  buildspec.yml  codecov.yml  foo  genindex.html  index.html  multi-conda-env.Dockerfile  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  software_install.md
.circleci/: Dockerfile.circleci  config.yml
.doctrees/: api.doctree  environment.pickle  index.doctree
.doctrees/api/: neurodocker.doctree  neurodocker.reproenv.doctree  neurodocker.reproenv.exceptions.doctree  neurodocker.reproenv.renderers.doctree  neurodocker.reproenv.state.doctree  neurodocker.reproenv.template.doctree  neurodocker.reproenv.types.doctree
.doctrees/user_guide/: add_template.doctree  cli.doctree  common_uses.doctree  examples.doctree  index.doctree  installation.doctree  known_issues.doctree  minify.doctree  quickstart.doctree  templates_renderers.doctree
.github/: dependabot.yml
.github/workflows/: afni.yml  ants.yml  bids_validator.yml  bootstrap.yml  cat12.yml  codespell.yml  convert3d.yml  create_workflows.py  dcm2niix.yml  docker_build.jinja  docker_build.yml  docker_publish.yml  docs.yml  freesurfer.yml  fsl.yml  jq.yml  matlabmcr.yml  miniconda.yml  mricron.yml  mrtrix3.yml  publish.yml  publish_container.yml  pull-request.yml  release.yml  run_precommit.yml  spm12.yml  stale.yml  test_doc.yml  type_checks.yml  update_precommit_hooks.yml  validate.yml
_modules/: index.html
_sources/user_guide/: add_template.rst.txt  cli.rst.txt  examples.rst.txt  installation.rst.txt  minify.rst.txt  quickstart.rst.txt
api/: neurodocker.html  neurodocker.reproenv.exceptions.html  neurodocker.reproenv.html  neurodocker.reproenv.renderers.html  neurodocker.reproenv.state.html  neurodocker.reproenv.template.html  neurodocker.reproenv.types.html
docs/: Makefile  README.md  add_template.rst  api.rst  build_results.rst  cli.rst  common_uses.rst  conf.py  examples.rst  generate_cli_help.sh  index.rst  list_softwares.py  quickstart.rst  user_guide.rst
docs/_templates/: layout.html
docs/api/: neurodocker.reproenv.exceptions.rst  neurodocker.reproenv.renderers.rst  neurodocker.reproenv.rst  neurodocker.reproenv.state.rst  neurodocker.reproenv.template.rst  neurodocker.reproenv.types.rst  neurodocker.rst
docs/common_uses/: conda_multiple_env.txt
docs/examples/: nipype_tuto.txt
docs/sphinxext/: github_link.py
docs/test-all-templates/: README.md  conftest.py  create_docs_build_results.py  test_all_templates.py
docs/user_guide/: cli.rst  cli_auto.rst  common_uses.rst  examples.rst  index.rst  installation.rst  known_issues.rst  quickstart.rst  templates_renderers.rst
examples/: README.md  example_spec.json  generated-full.Dockerfile  test_examples.py  test_examples.sh
examples/conda_python/: Dockerfile  README.md  Singularity  create_dockerfile.sh  generate.sh
examples/fsl/: Dockerfile  README.md  Singularity  create_dockerfile.sh  generate.sh
examples/nipype_tutorial/: Dockerfile  README.md  Singularity  create_dockerfile.sh  generate.sh
examples/use_cases/: README.md  processing_script.py  processing_script.sh
neurodocker/: __init__.py  _version.py  docker_api.py  dockerfile.py  generate.py  generics.yaml  main.py  neurodocker.py  parser.py  utils.py  version.py
neurodocker/cli/: cli.py  generate.py
neurodocker/docker/: __init__.py  ants.py  docker.py  docker_image.py  dockerfile.py  miniconda.py  spm.py  utils.py
neurodocker/generators/: __init__.py  common.py  docker.py  singularity.py
neurodocker/generics/: README.md  _neurodocker_header.yaml  afni.yaml  ants.yaml  convert3d.yaml  dcm2niix.yaml  freesurfer.yaml  fsl.yaml  matlab-mcr.yaml  minc.yaml  miniconda.yaml  mrtrix3.yaml  spm.yaml
neurodocker/interfaces/: __init__.py  _base.py  afni.py  ants.py  convert3d.py  dcm2niix.py  freesurfer.py  fsl.py  interfaces.py  minc.py  miniconda.py  mrtrix.py  neurodebian.py  petpvc.py  reprozip.py  spm.py
neurodocker/reproenv/: __init__.py  exceptions.py  renderers.py  state.py  template.py  types.py
neurodocker/reprozip/: __init__.py  merge.py  trace.py
neurodocker/specs/: __init__.py  afni.yaml  ants.yaml  dcm2niix.yaml  freesurfer.yaml  fsl.yaml
neurodocker/templates/: README.md  __init__.py  _default.yaml  _header.yaml  afni.yaml  ants.yaml  bids_validator.yaml  cat12.yaml  convert3d.yaml  dcm2niix.yaml  freesurfer.yaml  fsl.yaml  gentoo.yaml  itksnap.yaml  jq.yaml  mango.yaml  matlab-mcr.yaml  matlabmcr.yaml  minc.yaml  miniconda.yaml  mricron.yaml  mrtrix3.yaml  ndfreeze.yaml  neurodebian.yaml  niftyreg.yaml  petpvc.yaml  spm.yaml  spm12.yaml  vnc.yaml
neurodocker/tests/: env-specs.json  test_docker_api.py  test_dockerfile.py  test_generate.py  test_main.py  test_neurodocker.py  test_parser.py  test_utils.py  test_version.py
samples/: README.md  README.txt  gen-xenial-py35.yml
samples/gen-xenial-py35/: Dockerfile  conda-env.yml
samples/json_files/: ubuntu-16.04_py-3.5.1.json
samples/py27/: Dockerfile
samples/py35/: Dockerfile
samples/test/: Dockerfile
samples/trusty-afni-py35/: Dockerfile
samples/trusty-py27/: Dockerfile
samples/trusty-py35/: Dockerfile
samples/ubuntu-16.04_py-3.5.1/: Dockerfile  conda-env.json
src/: __init__.py  docker_utils.py  gen_docker.py  gen_docker_cmd.py  setup_docker.py  utils.py
src/docker/: __init__.py  ants.py  docker_image.py  dockerfile.py  fsl.py  miniconda.py  spm.py  utils.py
src/dockerfile/: docker_api.py  dockerfile.py  fsl.py  miniconda.py  miniconda_old.py  utils.py
tests/: _generate_dockerfiles.py  _test_params.csv  build_all.sh  utils.py
tests/evaluators/: nifti.py
user_guide/: add_template.html  cli.html  common_uses.html  examples.html  index.html  installation.html  known_issues.html  minify.html  quickstart.html  templates_renderers.html
(+95 files in other folders)
