[metadata]
name = neurodocker
url = https://github.com/repronim/neurodocker
author = Neurodocker Developers
author_email = jakub.kaczmarzyk@gmail.com
description = Create custom containers for neuroimaging
license = Apache License, 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.5
install_requires =
    etelemetry>=0.2.0
    jinja2>=2.0
    PyYAML>=3.0

[options.extras_require]
dev =
    codecov
    docker>=3.0
    flake8
    pre-commit
    pytest-cov>=2.0
all =
    %(dev)s

[options.entry_points]
console_scripts =
    neurodocker = neurodocker.neurodocker:main
    neurodocker-minify = neurodocker.reprozip.gentle.trace:main

[options.package_data]
neurodocker =
    templates/*.yaml
    reprozip/gentle/_trace.sh
    reprozip/utils/reprozip_trace_runner.sh

[versioneer]
VCS = git
style = pep440
versionfile_source = neurodocker/_version.py
versionfile_build = neurodocker/_version.py
tag_prefix =
parentdir_prefix =

[coverage:run]
branch = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
