[metadata]
name = neurodocker
url = https://github.com/repronim/neurodocker
author = Neurodocker Developers
author_email = jakub.kaczmarzyk@gmail.com
description = A generic generator of Dockerfiles and Singularity recipes
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click >= 7.0, <8.0
    etelemetry >= 0.2.0
    jinja2 >= 2.0
    jsonschema >= 3.0
    mypy-extensions
    pyyaml  >= 5.0
    typing-extensions

[options.extras_require]
minify =
    docker >= 4.4.1
dev =
    %(minify)s
    black <= 21.12b0
    codecov
    flake8
    mypy == 0.790
    pre-commit
    pytest >= 6.0
    pytest-cov >= 2.0.0
    pytest-reportlog >= 0.1.2
    pytest-xdist >= 2.2.0
docs =
    sphinx >= 3.4
    pydata-sphinx-theme
    sphinxcontrib.apidoc >= 0.3
all =
    %(minify)s
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    neurodocker = neurodocker.cli.cli:cli

[options.package_data]
neurodocker =
    templates/*.yaml
    reproenv/schemas/*.json
    cli/minify/_trace.sh

[versioneer]
VCS = git
style = pep440
versionfile_source = neurodocker/_version.py
versionfile_build = neurodocker/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = neurodocker/_version.py

[mypy-neurodocker._version]
ignore_errors = True

[mypy-docker]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov=neurodocker --cov-config=setup.cfg --verbose --strict-markers
markers =
    builds_docker: builds a docker image
    builds_singularity: builds a singularity image
    long: mark a test as taking a long time (minutes)
    verylong: mark a test as taking a very long time (over 10 minutes)

[coverage:run]
omit =
    */tests/*
    neurodocker/_version.py
